--- a/my-agent.ipynb
+++ b/my-agent.ipynb
@@ -122,61 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "dbb95413",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "models/gemini-1.0-pro-vision-latest\n",
-      "models/gemini-pro-vision\n",
-      "models/gemini-1.5-pro-latest\n",
-      "models/gemini-1.5-pro-001\n",
-      "models/gemini-1.5-pro-002\n",
-      "models/gemini-1.5-pro\n",
-      "models/gemini-1.5-flash-latest\n",
-      "models/gemini-1.5-flash-001\n",
-      "models/gemini-1.5-flash-001-tuning\n",
-      "models/gemini-1.5-flash\n",
-      "models/gemini-1.5-flash-002\n",
-      "models/gemini-1.5-flash-8b\n",
-      "models/gemini-1.5-flash-8b-001\n",
-      "models/gemini-1.5-flash-8b-latest\n",
-      "models/gemini-1.5-flash-8b-exp-0827\n",
-      "models/gemini-1.5-flash-8b-exp-0924\n",
-      "models/gemini-2.5-pro-exp-03-25\n",
-      "models/gemini-2.5-pro-preview-03-25\n",
-      "models/gemini-2.0-flash-exp\n",
-      "models/gemini-2.0-flash\n",
-      "models/gemini-2.0-flash-001\n",
-      "models/gemini-2.0-flash-exp-image-generation\n",
-      "models/gemini-2.0-flash-lite-001\n",
-      "models/gemini-2.0-flash-lite\n",
-      "models/gemini-2.0-flash-lite-preview-02-05\n",
-      "models/gemini-2.0-flash-lite-preview\n",
-      "models/gemini-2.0-pro-exp\n",
-      "models/gemini-2.0-pro-exp-02-05\n",
-      "models/gemini-exp-1206\n",
-      "models/gemini-2.0-flash-thinking-exp-01-21\n",
-      "models/gemini-2.0-flash-thinking-exp\n",
-      "models/gemini-2.0-flash-thinking-exp-1219\n",
-      "models/learnlm-1.5-pro-experimental\n",
-      "models/gemma-3-1b-it\n",
-      "models/gemma-3-4b-it\n",
-      "models/gemma-3-12b-it\n",
-      "models/gemma-3-27b-it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import google.generativeai as genai\n",
+    "# import google.generativeai as genai\n",
     "\n",
-    "# 列出可用模型\n",
-    "for m in genai.list_models():\n",
-    "    if 'generateContent' in m.supported_generation_methods:\n",
-    "        print(m.name)"
+    "# # 列出可用模型\n",
+    "# for m in genai.list_models():\n",
+    "#     if 'generateContent' in m.supported_generation_methods:\n",
+    "#         print(m.name)"
    ]
   },
   {
@@ -460,24 +416,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3b8fa0df",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "File path /Users/itsyuimoriispace/Desktop/Digital Transformation.pdf is not a valid file or url",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[83], line 22\u001b[0m\n\u001b[1;32m     19\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/Users/itsyuimoriispace/Desktop/Digital Transformation.pdf\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Load and parse the PDF\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m loader \u001b[38;5;241m=\u001b[39m \u001b[43mPyPDFLoader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m pages \u001b[38;5;241m=\u001b[39m loader\u001b[38;5;241m.\u001b[39mload_and_split()\n\u001b[1;32m     25\u001b[0m llm \u001b[38;5;241m=\u001b[39m ChatGoogleGenerativeAI(\n\u001b[1;32m     26\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgemini-2.0-flash-001\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     27\u001b[0m     temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     30\u001b[0m     max_retries\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     31\u001b[0m )\n",
-      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_community/document_loaders/pdf.py:281\u001b[0m, in \u001b[0;36mPyPDFLoader.__init__\u001b[0;34m(self, file_path, password, headers, extract_images, mode, images_parser, images_inner_format, pages_delimiter, extraction_mode, extraction_kwargs)\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m    239\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    240\u001b[0m     file_path: Union[\u001b[38;5;28mstr\u001b[39m, PurePath],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    250\u001b[0m     extraction_kwargs: Optional[\u001b[38;5;28mdict\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    251\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    252\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Initialize with a file path.\u001b[39;00m\n\u001b[1;32m    253\u001b[0m \n\u001b[1;32m    254\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;124;03m        `aload` methods to retrieve parsed documents with content and metadata.\u001b[39;00m\n\u001b[1;32m    280\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 281\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheaders\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mheaders\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    282\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparser \u001b[38;5;241m=\u001b[39m PyPDFParser(\n\u001b[1;32m    283\u001b[0m         password\u001b[38;5;241m=\u001b[39mpassword,\n\u001b[1;32m    284\u001b[0m         mode\u001b[38;5;241m=\u001b[39mmode,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    290\u001b[0m         extraction_kwargs\u001b[38;5;241m=\u001b[39mextraction_kwargs,\n\u001b[1;32m    291\u001b[0m     )\n",
-      "File \u001b[0;32m~/Documents/github-new/ai-agent-langchain/new_venv/lib/python3.10/site-packages/langchain_community/document_loaders/pdf.py:140\u001b[0m, in \u001b[0;36mBasePDFLoader.__init__\u001b[0;34m(self, file_path, headers)\u001b[0m\n\u001b[1;32m    138\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(temp_pdf)\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_path):\n\u001b[0;32m--> 140\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile path \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m is not a valid file or url\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_path)\n",
-      "\u001b[0;31mValueError\u001b[0m: File path /Users/itsyuimoriispace/Desktop/Digital Transformation.pdf is not a valid file or url"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "# from langchain.prompts import PromptTemplate\n",
@@ -911,6 +853,248 @@
     "# # Print the resulting prompt\n",
     "# print(formatted_prompt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1a599de4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are AI Assistant, you have friendly and professional personality.\n",
+      "You follow these behaviors:\n",
+      "1. Provide accurate information\n",
+      "2. Maintain politeness\n",
+      "3. Answer questions patiently\n",
+      "\n",
+      "You are not allowed to have the following behaviors:\n",
+      "1. Do not provide false information\n",
+      "2. Do not use offensive language\n",
+      "3. Do not violate ethical guidelines\n",
+      "4. Do not say you are AI, when you don't know the answer, you can say let me think a bit more\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# First Layer: Basic Character Design\n",
+    "character_template = \"\"\"You are {person}, you have {traits}.\"\"\"\n",
+    "character_prompt = PromptTemplate.from_template(character_template)\n",
+    "\n",
+    "# Second Layer: Behavior Design\n",
+    "behavior_template = \"\"\"You follow these behaviors:\n",
+    "{behavior_list}\n",
+    "\"\"\"\n",
+    "behavior_prompt = PromptTemplate.from_template(behavior_template)\n",
+    "\n",
+    "# Third Layer: Prohibited Behaviors\n",
+    "prohibit_template = \"\"\"You are not allowed to have the following behaviors:\n",
+    "{prohibit_list}\n",
+    "\"\"\"\n",
+    "prohibit_prompt = PromptTemplate.from_template(prohibit_template)\n",
+    "\n",
+    "# Final Prompt template\n",
+    "full_template = \"\"\"{Character}\n",
+    "{behavior}\n",
+    "{prohibit}\"\"\"\n",
+    "final_prompt = PromptTemplate.from_template(full_template)\n",
+    "\n",
+    "# Using the new recommended approach instead of PipelinePromptTemplate\n",
+    "def format_complete_prompt(person, traits, behavior_list, prohibit_list):\n",
+    "    # Initialize input dictionary\n",
+    "    my_input = {\n",
+    "        \"person\": person,\n",
+    "        \"traits\": traits,\n",
+    "        \"behavior_list\": behavior_list,\n",
+    "        \"prohibit_list\": prohibit_list\n",
+    "    }\n",
+    "    \n",
+    "    # Chain the prompts manually\n",
+    "    formatted_results = {}\n",
+    "    \n",
+    "    # Format each component prompt\n",
+    "    formatted_results[\"Character\"] = character_prompt.format(\n",
+    "        person=my_input[\"person\"], \n",
+    "        traits=my_input[\"traits\"]\n",
+    "    )\n",
+    "    \n",
+    "    formatted_results[\"behavior\"] = behavior_prompt.format(\n",
+    "        behavior_list=my_input[\"behavior_list\"]\n",
+    "    )\n",
+    "    \n",
+    "    formatted_results[\"prohibit\"] = prohibit_prompt.format(\n",
+    "        prohibit_list=my_input[\"prohibit_list\"]\n",
+    "    )\n",
+    "    \n",
+    "    # Format the final prompt with the results from each component\n",
+    "    complete_prompt = final_prompt.format(**formatted_results)\n",
+    "    \n",
+    "    return complete_prompt\n",
+    "\n",
+    "# Example usage\n",
+    "example_prompt = format_complete_prompt(\n",
+    "    person=\"AI Assistant\",\n",
+    "    traits=\"friendly and professional personality\",\n",
+    "    behavior_list=\"1. Provide accurate information\\n2. Maintain politeness\\n3. Answer questions patiently\",\n",
+    "    prohibit_list=\"1. Do not provide false information\\n2. Do not use offensive language\\n3. Do not violate ethical guidelines\\n4. Do not say you are AI, when you don't know the answer, you can say let me think a bit more\"\n",
+    ")\n",
+    "\n",
+    "print(example_prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f8fac6b",
+   "metadata": {},
+   "source": [
+    "https://tensorflow.classcat.com/2023/08/25/langchain-modules-model-io-prompts-prompt-templates-prompt-composition/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7ec20fe",
+   "metadata": {},
+   "source": [
+    "# Serialize, use files to manage prompt template\n",
+    "- support`json/xml/txt` files  \n",
+    "- version control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d5d04cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import load_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "80a8e691",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_type': 'prompt', 'input_variables': ['name', 'what'], 'template': 'tell me a {what} story about {name}'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "# Load a YAML file\n",
+    "with open('simple_prompt.yaml', 'r') as file:\n",
+    "    data = yaml.safe_load(file)\n",
+    "\n",
+    "# Print the loaded data\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98be5796",
+   "metadata": {
+    "vscode": {
+     "languageId": "go"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['name', 'what'] input_types={} partial_variables={} template='tell me a {what} story about {name}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = load_prompt(\"prompt_without_parser.json\")\n",
+    "\n",
+    "prompt.output_parser.parser(\n",
+    "    \"George Washington was born in 1732 and died in 1799.\\n\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6f06982",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc5ec80c",
+   "metadata": {},
+   "source": [
+    "# What the example selector does:\n",
+    "It selects the most relevant examples based on their similarity to the input. This is done by calculating the cosine similarity between embeddings.\n",
+    "\n",
+    "Why 128K is better than 32K:\n",
+    "\n",
+    "- Larger context window means more examples can be included\n",
+    "- The model can select the most relevant examples from a larger set of samples\n",
+    "- Can handle more complex and longer examples and behavioral patterns\n",
+    "\n",
+    "1. LengthBasedExampleSelector\n",
+    "```Python\n",
+    "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
+    "\n",
+    "example_selector = LengthBasedExampleSelector(\n",
+    "    examples=examples,\n",
+    "    max_length=1000  # 示例总长度限制\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "2. MaxMarginalRelevanceExampleSelector\n",
+    "```python\n",
+    "from langchain.prompts.example_selector import MaxMarginalRelevanceExampleSelector\n",
+    "\n",
+    "example_selector = MaxMarginalRelevanceExampleSelector.from_examples(\n",
+    "    examples,\n",
+    "    OpenAIEmbeddings(),\n",
+    "    FAISS,\n",
+    "    k=2,\n",
+    "    fetch_k=10   # Number of examples to fetch before selecting\n",
+    ")\n",
+    "```\n",
+    "3. SemanticSimilarityExampleSelector\n",
+    "```python\n",
+    "from langchain.prompts.example_selector import SemanticSimilarityExampleSelector\n",
+    "from langchain.vectorstores import FAISS\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "\n",
+    "examples = [\n",
+    "    {\"input\": \"How to use Python to process CSV files??\", \"output\": \"You can use the pandas library...\"},\n",
+    "    {\"input\": \"How to implement asynchronous operations in JavaScript?\", \"output\": \"You can use Promise or async/await...\"}\n",
+    "]\n",
+    "\n",
+    "example_selector = SemanticSimilarityExampleSelector.from_examples(\n",
+    "    examples,\n",
+    "    OpenAIEmbeddings(),\n",
+    "    FAISS,\n",
+    "    k=2    # Number of examples to select\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac52714a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
