update selector example

--- a/my-agent.ipynb
+++ b/my-agent.ipynb
@@ -1028,70 +1028,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f06982",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc5ec80c",
+   "id": "cadfae17",
    "metadata": {},
    "source": [
-    "# What the example selector does:\n",
-    "It selects the most relevant examples based on their similarity to the input. This is done by calculating the cosine similarity between embeddings.\n",
+    "# Custom Example Selector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fd394767",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Translate the following words from English to Japanese:\n",
+      "\n",
+      "Input: hello -> Output: こんにちは (konnichiwa)\n",
+      "\n",
+      "Input: goodbye -> Output: さようなら (sayounara)\n",
+      "\n",
+      "Input: thank you -> Output: ありがとう (arigatou)\n",
+      "\n",
+      "Input: yes -> Output: はい (hai)\n",
+      "\n",
+      "Input: no -> Output: いいえ (iie)\n",
+      "\n",
+      "Input: word -> Output:\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain_core.prompts.prompt import PromptTemplate\n",
     "\n",
-    "Why 128K is better than 32K:\n",
-    "\n",
-    "- Larger context window means more examples can be included\n",
-    "- The model can select the most relevant examples from a larger set of samples\n",
-    "- Can handle more complex and longer examples and behavioral patterns\n",
-    "\n",
-    "1. LengthBasedExampleSelector\n",
-    "```Python\n",
-    "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
-    "\n",
-    "example_selector = LengthBasedExampleSelector(\n",
-    "    examples=examples,\n",
-    "    max_length=1000  # 示例总长度限制\n",
-    ")\n",
-    "```\n",
-    "\n",
-    "2. MaxMarginalRelevanceExampleSelector\n",
-    "```python\n",
-    "from langchain.prompts.example_selector import MaxMarginalRelevanceExampleSelector\n",
-    "\n",
-    "example_selector = MaxMarginalRelevanceExampleSelector.from_examples(\n",
-    "    examples,\n",
-    "    OpenAIEmbeddings(),\n",
-    "    FAISS,\n",
-    "    k=2,\n",
-    "    fetch_k=10   # Number of examples to fetch before selecting\n",
-    ")\n",
-    "```\n",
-    "3. SemanticSimilarityExampleSelector\n",
-    "```python\n",
-    "from langchain.prompts.example_selector import SemanticSimilarityExampleSelector\n",
-    "from langchain.vectorstores import FAISS\n",
-    "from langchain.embeddings import OpenAIEmbeddings\n",
-    "\n",
+    "# Define your translation examples\n",
     "examples = [\n",
-    "    {\"input\": \"How to use Python to process CSV files??\", \"output\": \"You can use the pandas library...\"},\n",
-    "    {\"input\": \"How to implement asynchronous operations in JavaScript?\", \"output\": \"You can use Promise or async/await...\"}\n",
+    "    {\"input\": \"hello\", \"output\": \"こんにちは (konnichiwa)\"},\n",
+    "    {\"input\": \"goodbye\", \"output\": \"さようなら (sayounara)\"},\n",
+    "    {\"input\": \"thank you\", \"output\": \"ありがとう (arigatou)\"},\n",
+    "    {\"input\": \"yes\", \"output\": \"はい (hai)\"},\n",
+    "    {\"input\": \"no\", \"output\": \"いいえ (iie)\"}\n",
     "]\n",
     "\n",
-    "example_selector = SemanticSimilarityExampleSelector.from_examples(\n",
-    "    examples,\n",
-    "    OpenAIEmbeddings(),\n",
-    "    FAISS,\n",
-    "    k=2    # Number of examples to select\n",
+    "# Define the example prompt template\n",
+    "example_prompt = PromptTemplate.from_template(\"Input: {input} -> Output: {output}\")\n",
+    "\n",
+    "# Create the few-shot prompt template using examples directly\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "    examples=examples,  # Use examples directly instead of example_selector\n",
+    "    example_prompt=example_prompt,\n",
+    "    suffix=\"Input: {input} -> Output:\",\n",
+    "    prefix=\"Translate the following words from English to Japanese:\",\n",
+    "    input_variables=[\"input\"],\n",
     ")\n",
-    "```"
+    "\n",
+    "# Format the prompt with an input\n",
+    "formatted_prompt = prompt.format(input=\"word\")\n",
+    "print(formatted_prompt)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac52714a",
+   "id": "ed65b689",
    "metadata": {},
    "outputs": [],
    "source": []
