custom prompt template

--- a/my-agent.ipynb
+++ b/my-agent.ipynb
@@ -1091,12 +1091,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "859b5b9b",
+   "metadata": {},
+   "source": [
+    "# Create a custom prompt template"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed65b689",
+   "id": "a8fc665e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain.prompts import StringPromptTemplate\n",
+    "import inspect\n",
+    "import os\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "\n",
+    "# Defining Simple Functions\n",
+    "def hello_world():\n",
+    "    print(\"Hello World\")\n",
+    "\n",
+    "PROMPT = \"\"\"\n",
+    "You are a very talented programmer, now you are given the following function name, you will output the source code of this code in the following format, with Japanese explanation and English explanation\n",
+    "\n",
+    "Function name: {function_name}\n",
+    "Source code: {source_code}\n",
+    "Code Explanation: \n",
+    "[Japanese explanation]\n",
+    "[English explanation]\n",
+    "\"\"\"\n",
+    "\n",
+    "def get_source_code(function_name):\n",
+    "    return inspect.getsource(function_name)\n",
+    "\n",
+    "class CustomPrompt(StringPromptTemplate):\n",
+    "    template: str = PROMPT\n",
+    "    \n",
+    "    def format(self, **kwargs) -> str:\n",
+    "        # Getting the source code\n",
+    "        source_code = get_source_code(kwargs[\"function_name\"])\n",
+    "        \n",
+    "        # Generate prompt templates\n",
+    "        prompt = self.template.format(\n",
+    "            function_name=kwargs[\"function_name\"].__name__, \n",
+    "            source_code=source_code\n",
+    "        )\n",
+    "        return prompt\n",
+    "\n",
+    "# 1. Creating Custom Prompts\n",
+    "generateCustomPrompt = CustomPrompt(input_variables=[\"function_name\"])\n",
+    "pm = generateCustomPrompt.format(function_name=hello_world)\n",
+    "print(\"Generated prompt:\")\n",
+    "print(f\"before connecting with llm: {pm}\")\n",
+    "\n",
+    "# 2. Connecting to LLM\n",
+    "api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "if not api_key:\n",
+    "    print(\"Warning: GOOGLE_API_KEY environment variable not set\")    \n",
+    "llm = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-2.0-flash-001\",\n",
+    "    temperature=0,\n",
+    "    max_tokens=None,\n",
+    "    timeout=None,\n",
+    "    max_retries=2,\n",
+    ")\n",
+    "\n",
+    "try:\n",
+    "    # Call LLM and capture the results\n",
+    "    result = llm.predict(pm)\n",
+    "    print(\"\\nLLM Response:\")\n",
+    "    print(result)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error when calling LLM: {e}\")"
+   ]
   }
  ],
  "metadata": {
